# ozon-mcp

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  api_intercept_ozon.py  cli.py  fetch_ozon_code.py  mcp.json  pyproject.toml  requirements.txt  send_price_alert.py
src/: browser.py  mail.py  ozon_selectors.py  server.py
src/ozon_mcp/: __init__.py  _selectors.py  browser.py  data_exporter.py  mail.py  ozon_selectors.py  selectors.yaml  server.py  session.py
src/ozon_mcp/handlers/: __init__.py  base.py
tests/: __init__.py  test_browser.py  test_handlers.py  test_mail.py  test_selectors.py  test_server.py  test_session.py
