[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ozon_mcp"
version = "0.1.1"
description = "OZON MCP Server - Browser automation for OZON seller platform with auto profile detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Oychao", email = "oychao@example.com"}
]
keywords = ["ozon", "mcp", "playwright", "automation", "ecommerce"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "playwright>=1.40.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "pyyaml>=6.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

# 命令行入口点 - uv tool install 后可用 ozon-mcp 命令
[project.scripts]
ozon-mcp = "ozon_mcp.server:cli_main"

[project.urls]
Homepage = "https://github.com/oychao1988/ozon-mcp"
Repository = "https://github.com/oychao1988/ozon-mcp.git"
Issues = "https://github.com/oychao1988/ozon-mcp/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ozon_mcp", "ozon_mcp.handlers"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
